...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_playerHomeScreen_CreateNewCryptogram"
        style="@style/style_button"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:text="Create New Cryptogram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_playerHomeScreen_screenTitle"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/button_playerHomeScreen_ListOfUnsolvedCryptograms"
        style="@style/style_button"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:text="List of Unsolved Cryptograms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_playerHomeScreen_CreateNewCryptogram"
        app:layout_constraintVertical_bias="0.11" />

    <Button
        android:id="@+id/button_playerHomeScreen_ListOfCompletedCryptogram"
        style="@style/style_button"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="List of Completed Cryptograms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
