...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cryptoStat_selectCryptolabel">

        <ListView
            android:id="@+id/listview_listCompleted_CryptogramNameColumn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:textAlignment="center"/>

        <!--<ListView
...
