...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_unsolvedCryptogram_listViewTitles">

        <ListView
            android:id="@+id/listview_unsolvedCryptogram_cryptogramNameColumn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_weight="1" />

        <ListView
...
